--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ body {
   width: 100%;
   height: 2px;
   top: 9px;
+  transition: all 0.3s ease 0s;
 
 }
 
@@ -138,6 +139,7 @@ body {
   position: absolute;
   width: 100%;
   height: 2px;
+  transition: all 0.3s ease 0s;
 }
 
 .header_burger:before {
@@ -744,9 +746,6 @@ body {
   padding: 0 15px;
   margin: 0 auto;
   height: 100%;
-  background-image: url("../img/Vector_ba.svg");
-  background-position: right;
-  background-repeat: no-repeat;
 }
 
 .title_why_us {
@@ -1165,12 +1164,16 @@ body {
 /* 1200px */
 /* ------------------------------------------------------------------------------------------------ */
 /* 1200px */
+/* menu */
+/* menu */
+/* menu */
+/* menu */
   @media screen and (max-width: 1200px) {
     .header__logo{
       margin-left: 30px;
       margin-top: 5px;
       margin-right: 120px;
-      z-index: 10;
+      z-index: 12;
     }
     .header_burger {
       display: block;
@@ -1180,19 +1183,31 @@ body {
       right: 0;
       z-index: 12;
     }
-    .header_burger .active{
-    transform: rotate(45.25px);
+    .header_burger.active span{
+      transform: scale(0);
+      }
+    .header_burger.active::before{
+    transform: rotate(45deg);
+    top: 9px;
     }
+    .header_burger.active::after{
+      transform: rotate(-45deg);
+      bottom: 9px;
+      }
     .header_nav-list{
-      display: none;
+      display: block;
       position: fixed;
       padding-top: 100px;
-      top: 0;
+      top: -100%;
       left: 0;
       width: 100%;
       height: 100%;
       background-color: #000;
       z-index: 11;
+    }
+    .header_nav-list.active{
+      top: 0;
+      transition: all 0.3s ease 0s;
     }
     .header_nav-item{
       padding-left: 20px;
@@ -1208,6 +1223,18 @@ body {
     /* why_us */
     .WHY_US{
       margin-left: 15px;
+      max-width:842px;
+  
+    }
+    .text_why_us{
+      display: inline-block;
+      font-family: Poppins;
+      font-size: 19px;
+      padding-top: 25px;
+      word-wrap: break-word;
+      margin-bottom: 25px;
+      text-align: justify;
+      line-height: 1.6;
     }
     .img_why_us{
       display: none;
@@ -1222,8 +1249,10 @@ body {
     }
     .information{
       display: block;
-  
     }
+      .flex{
+        max-width:842px;
+      }
     .title2{
       margin-left: 0;
     }
@@ -1239,17 +1268,19 @@ body {
       display: none;
     }
     }
-
-    /* menu */
+/* 992px */
+/* ------------------------------------------------------------------------------------------------ */
+/* 992px */
 /* menu */
 /* menu */
 /* menu */
-@media screen and (max-width: 767px) {
+/* menu */
+@media screen and (max-width: 1000px ) {
   .header__logo{
     margin-left: 30px;
     margin-top: 5px;
     margin-right: 120px;
-    z-index: 10;
+    z-index: 12;
   }
   .header_burger {
     display: block;
@@ -1259,19 +1290,31 @@ body {
     right: 0;
     z-index: 12;
   }
-  .header_burger .active{
-  transform: rotate(45.25px);
+  .header_burger.active span{
+    transform: scale(0);
+    }
+  .header_burger.active::before{
+  transform: rotate(45deg);
+  top: 9px;
   }
+  .header_burger.active::after{
+    transform: rotate(-45deg);
+    bottom: 9px;
+    }
   .header_nav-list{
     display: block;
     position: fixed;
     padding-top: 100px;
-    top: 0;
+    top: -100%;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: #000;
     z-index: 11;
+  }
+  .header_nav-list.active{
+    top: 0;
+    transition: all 0.3s ease 0s;
   }
   .header_nav-item{
     padding-left: 20px;
@@ -1287,7 +1330,109 @@ body {
   /* why_us */
   .WHY_US{
     margin-left: 15px;
+    max-width:820px;
 
+  }
+  .img_why_us{
+    display: none;
+  }
+  .container_why_us{
+    background-image: url("../img/Vector_ba.svg");
+    background-position: right;
+    background-repeat: no-repeat;
+  }
+  .rectangle{
+    display: none;
+  }
+  .information{
+    display: block;
+  }
+    .flex{
+      max-width:820px;
+    }
+  .title2{
+    margin-left: 0;
+  }
+  .text2{
+    margin-top: 80px;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+  .quotes_t{
+    display: none;
+  }
+  .quotes_{
+    display: none;
+  }
+}
+  
+/* 767px */
+/* ------------------------------------------------------------------------------------------------ */
+/* 767px */
+/* menu */
+/* menu */
+/* menu */
+/* menu */
+@media screen and (max-width: 767px) {
+  .header__logo{
+    margin-left: 30px;
+    margin-top: 5px;
+    margin-right: 120px;
+    z-index: 12;
+  }
+  .header_burger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+    right: 0;
+    z-index: 12;
+  }
+  .header_burger.active span{
+    transform: scale(0);
+    }
+  .header_burger.active::before{
+  transform: rotate(45deg);
+  top: 9px;
+  }
+  .header_burger.active::after{
+    transform: rotate(-45deg);
+    bottom: 9px;
+    }
+  .header_nav-list{
+    display: block;
+    position: fixed;
+    padding-top: 100px;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    z-index: 11;
+  }
+  .header_nav-list.active{
+    top: 0;
+    transition: all 0.3s ease 0s;
+  }
+  .header_nav-item{
+    padding-left: 20px;
+    padding-top: 30px;
+    font-size: 50px;
+  }
+  .header_user-nav{
+    display: none;
+  }
+  /* why_us */
+  /* why_us */
+  /* why_us */
+  /* why_us */
+  .WHY_US{
+    margin-left: 15px;
+    max-width:595px;
+  
+  }
+  .title_why_us{
+    font-size: 80px;
   }
   .text_why_us{
     display: inline-block;
@@ -1313,10 +1458,124 @@ body {
   }
   .information{
     display: block;
-
   }
+    .flex{
+      max-width:595px;
+    }
   .title2{
     margin-left: 0;
+  }
+  .text2{
+    margin-top: 80px;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+  .quotes_t{
+    display: none;
+  }
+  .quotes_{
+    display: none;
+  }
+  }
+  /* 480px */
+/* ------------------------------------------------------------------------------------------------ */
+/* 480px */
+/* menu */
+/* menu */
+/* menu */
+/* menu */
+@media screen and (max-width: 480px) {
+  .header__logo{
+    margin-left: 30px;
+    margin-top: 5px;
+    margin-right: 120px;
+    z-index: 12;
+  }
+  .header_burger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+    right: 0;
+    z-index: 12;
+  }
+  .header_burger.active span{
+    transform: scale(0);
+    }
+  .header_burger.active::before{
+  transform: rotate(45deg);
+  top: 9px;
+  }
+  .header_burger.active::after{
+    transform: rotate(-45deg);
+    bottom: 9px;
+    }
+  .header_nav-list{
+    display: block;
+    position: fixed;
+    padding-top: 100px;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    z-index: 11;
+  }
+  .header_nav-list.active{
+    top: 0;
+    transition: all 0.3s ease 0s;
+  }
+  .header_nav-item{
+    padding-left: 20px;
+    padding-top: 30px;
+    font-size: 50px;
+  }
+  .header_user-nav{
+    display: none;
+  }
+  /* why_us */
+  /* why_us */
+  /* why_us */
+  /* why_us */
+  .WHY_US{
+    margin-left: 15px;
+    max-width:396px;
+
+  }
+  .title_why_us{
+    font-size: 80px;
+  }
+  .text_why_us{
+    display: inline-block;
+    font-family: Poppins;
+    font-size: 19px;
+    padding-top: 25px;
+    word-wrap: break-word;
+    margin-bottom: 25px;
+    text-align: justify;
+    line-height: 1.6;
+  }
+  .img_why_us{
+    display: none;
+  }
+  .container_why_us{
+    max-width: 767px;
+    background-image: url("../img/Vector_ba.svg");
+    background-position: right;
+    background-repeat: no-repeat;
+  }
+  .rectangle{
+    display: none;
+  }
+  .information{
+    display: block;
+  }
+    .flex{
+      max-width:396px;
+    }
+  .title2{
+    margin-left: 0;
+    font-size: 80px;
   }
   .text2{
     margin-top: 80px;
