--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ body {
 }
 
 .traning__plans-description p {
-    width: 555px;
+    max-width: 555px;
     height: 130px;
     font-size: 25px;
     line-height: 173.5%;
@@ -1304,11 +1304,15 @@ p {
 
 @media (max-width:480px) {
     .container {
-        width: 500px;
+        width: 450px;
     }
 
     .traning__plans-slide {
         transform: scale(.5);
+    }
+
+    .traning__plans-description p {
+        margin: 50px 30px 50px 50px;
     }
 
     .traning__plans-body::after {
@@ -1316,7 +1320,11 @@ p {
     }
 
     .wrapper {
-        width: 500px;
+        width: 450px;
+    }
+
+    .title {
+        max-width: 100%;
     }
 
     .socials {
@@ -1324,7 +1332,7 @@ p {
         left: 0;
         width: 200px;
         height: 50px;
-        border-radius: 0 0 28px 28px ;
+        border-radius: 0 0 28px 28px;
     }
 
     .socials-list {
@@ -1337,4 +1345,79 @@ p {
     }
 }
 
-@media (max-width:320px) {}
+@media (max-width:320px) {
+    .container {
+        width: 300px;
+    }
+
+    .traning__plans-title {
+        font-size: 60px;
+    }
+
+    .traning__text-discription {
+        font-size: 20px;
+    }
+
+    .traning__plans-body::after {
+        width: 400px;
+        height: 400px;
+        left: 35px;
+        top: 422px;
+        display: none;
+    }
+
+    .traning__slider-list {
+        height: 100%;
+    }
+
+    .traning__slider {
+        height: 350px;
+    }
+
+    .traning__plans-slide {
+        transform: scale(0.6);
+    }
+
+    .btn-box {
+        top: 400px;
+    }
+
+    .wrapper {
+        width: 300px;
+    }
+
+    .title {
+        font-size: 50px;
+        line-height: normal;
+        margin-bottom: 35px;
+    }
+
+    .image-slider {
+        transform: scale(0.8);
+    }
+
+    .swiper-slide__name, .swiper-slide__pos {
+        max-width: 300px;
+        font-size: 25px;
+    }
+
+    .swiper-slide-active .socials {
+        bottom: 0;
+        transform: translate(25%, 70%);
+    }
+
+    #swiper__pagination {
+        left: -43px;
+        top: 155px;
+    }
+
+    .custom-button-prev::after {
+        top: 118px;
+        right: 85px;
+    }
+
+    .custom-button-next::after {
+        top: 118px;
+        left: -3px;
+    }
+}
