--- a/css/main.css
+++ b/css/main.css
@@ -172,27 +172,17 @@ section {
   text-align: center;
   margin-bottom: 64px; }
 
-  .newsletter_container {
-    max-width: 1610px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-    /* Tablet */
-    /* Mobile */
-    /* Mobile XS */ }
-
-.newsletter {
+.subscribe_two {
   padding-top: 24px;
   padding-bottom: 48px; }
 
-.newsletter__wrapper {
+.subscribe__wrapper {
   text-align: center; }
 
 .section__title {
   margin-bottom: 29px; }
 
-.newsletter__message {
+.subscribe__message {
   color: #FFF;
   font-family: 'Ramabhadra', sans-serif;
   font-size: 20px;
@@ -201,9 +191,9 @@ section {
   text-transform: uppercase;
   margin-bottom: 75px; }
 
-.newsletter__block .input {
+.subscribe__block .input {
   margin-right: 8px; }
-.newsletter__block .button {
+.subscribe__block .button {
   width: 222px; }
 
 .footer__top {
