--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,9 @@ button:hover{
     margin: 0 auto;
     max-width: 1750px;
     background-color: black;
+    color: white;
 }
+
 
 .wrap_workshop {
  margin: 0 auto;
@@ -390,7 +392,7 @@ button:hover{
 .wrap_plans{
 
     max-width: 1579px;
-    height: 770px;
+    min-height: 770px;
     margin: 0 auto;
 }
 
@@ -401,34 +403,10 @@ button:hover{
 
 .grid_container{
     max-width: 1579px;
-    max-height: 770px;
+    min-height: 770px;
     margin: 0 auto;
-    /* display: grid;
-    grid-column-gap: 30px;
-    align-items: center; */
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
-    /* grid-template-columns: repeat(4, 260px);
-  
-    justify-content: space-around;
-  
-    background: #ccc; */
-    /* grid-column-gap: 10px;
-    padding: 4rem 2rem; */
-    /* grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-column-gap: 10px; 
-    grid-auto-columns: 1fr; */
-    /* это тоже самое, что grid-template-columns: 1fr 1fr 1fr 1fr; */
-    /* grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); */
-    /* это тоже самое, что grid-template-rows: 300px 300px; */
-     /* grid-template-rows: repeat(2, 300px); */
-    /* grid-row-gap: 10px; 
-    grid-gap: 10px;
-    grid-auto-columns: 1fr;
-    grid-auto-rows: 100px;  */
-    /* grid-template-rows: 100px 100px 100px; */
-    /* grid-auto-flow: column;
-    place-items: stretch; */
 }
 
 .grid-item {
@@ -620,7 +598,7 @@ body {
   max-width: 1580px;
   padding: 0 15px;
   margin: 0 auto;
-  height: 100%;
+  color: white;
 }
 
 .title {
@@ -681,7 +659,6 @@ p {
   max-width: 1580px;
   padding: 157px 31.83px;
   margin: 0 auto;
-  height: 100%;
 }
 
 .rectangle {
@@ -1035,7 +1012,7 @@ p {
   /* ---------------------------------------------------------------------------------------------- */
   /* wrap_plans */
     .wrap_plans {
-        height: 1400px;
+        /* height: 1400px; */
     }
     .wrap_plans h1{
         margin: 0 auto;
@@ -1117,9 +1094,9 @@ p {
   .wrap_plans h1{
     font-size: 70px;;
 }
-.wrap_plans {
+/* .wrap_plans {
     height: 2000px;
-}
+} */
 .grid_container{
     min-height: 770px;
 }
