--- a/css/style.css
+++ b/css/style.css
@@ -1544,6 +1544,108 @@ top: -140px;
 /* ------------------------------------------------------------------------------------------------ */
 /* 1200px */
 @media (max-width: 1199px){
+/* menu */
+/* menu */
+/* menu */
+/* menu */
+    .header__logo{
+        margin-left: 30px;
+        margin-top: 5px;
+        margin-right: 120px;
+        z-index: 12;
+      }
+      .header_burger {
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 20px;
+        right: 0;
+        z-index: 12;
+      }
+      .header_burger.active span{
+        transform: scale(0);
+        }
+      .header_burger.active::before{
+      transform: rotate(45deg);
+      top: 9px;
+      }
+      .header_burger.active::after{
+        transform: rotate(-45deg);
+        bottom: 9px;
+        }
+      .header_nav-list{
+        display: block;
+        position: fixed;
+        padding-top: 100px;
+        top: -100%;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        z-index: 11;
+      }
+      .header_nav-list.active{
+        top: 0;
+        transition: all 0.3s ease 0s;
+      }
+      .header_nav-item{
+        padding-left: 20px;
+        padding-top: 30px;
+        font-size: 50px;
+      }
+      .header_user-nav{
+        display: none;
+      }
+      /* why_us */
+      /* why_us */
+      /* why_us */
+      /* why_us */
+      .WHY_US{
+        margin-left: 15px;
+        max-width:842px;
+    
+      }
+      .text_why_us{
+        display: inline-block;
+        font-family: Poppins;
+        font-size: 19px;
+        padding-top: 25px;
+        word-wrap: break-word;
+        margin-bottom: 25px;
+        text-align: justify;
+        line-height: 1.6;
+      }
+      .img_why_us{
+        display: none;
+      }
+      .container_why_us{
+        background-image: url("../img/Vector_ba.svg");
+        background-position: right;
+        background-repeat: no-repeat;
+      }
+      .rectangle{
+        display: none;
+      }
+      .information{
+        display: block;
+      }
+        .flex{
+          max-width:842px;
+        }
+      .title2{
+        margin-left: 0;
+      }
+      .text2{
+        margin-top: 80px;
+        margin-left: 15px;
+        margin-right: 15px;
+      }
+      .quotes_t{
+        display: none;
+      }
+      .quotes_{
+        display: none;
+      }
   /* Workshops */
   /* --------------------------------------------------------------------------------------------- */
   /* Workshops */
@@ -1609,6 +1711,112 @@ top: -140px;
 /* ------------------------------------------------------------------------------------------------ */
 /* 767px */
 @media (max-width: 767px){
+/* menu */
+/* menu */
+/* menu */
+/* menu */
+    .header__logo{
+        margin-left: 30px;
+        margin-top: 5px;
+        margin-right: 120px;
+        z-index: 12;
+      }
+      .header_burger {
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 20px;
+        right: 0;
+        z-index: 12;
+      }
+      .header_burger.active span{
+        transform: scale(0);
+        }
+      .header_burger.active::before{
+      transform: rotate(45deg);
+      top: 9px;
+      }
+      .header_burger.active::after{
+        transform: rotate(-45deg);
+        bottom: 9px;
+        }
+      .header_nav-list{
+        display: block;
+        position: fixed;
+        padding-top: 100px;
+        top: -100%;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        z-index: 11;
+      }
+      .header_nav-list.active{
+        top: 0;
+        transition: all 0.3s ease 0s;
+      }
+      .header_nav-item{
+        padding-left: 20px;
+        padding-top: 30px;
+        font-size: 50px;
+      }
+      .header_user-nav{
+        display: none;
+      }
+      /* why_us */
+      /* why_us */
+      /* why_us */
+      /* why_us */
+      .WHY_US{
+        margin-left: 15px;
+        max-width:595px;
+      
+      }
+      .title_why_us{
+        font-size: 80px;
+      }
+      .text_why_us{
+        display: inline-block;
+        font-family: Poppins;
+        font-size: 19px;
+        padding-top: 25px;
+        word-wrap: break-word;
+        margin-bottom: 25px;
+        text-align: justify;
+        line-height: 1.6;
+      }
+      .img_why_us{
+        display: none;
+      }
+      .container_why_us{
+        max-width: 767px;
+        background-image: url("../img/Vector_ba.svg");
+        background-position: right;
+        background-repeat: no-repeat;
+      }
+      .rectangle{
+        display: none;
+      }
+      .information{
+        display: block;
+      }
+        .flex{
+          max-width:595px;
+        }
+      .title2{
+        margin-left: 0;
+      }
+      .text2{
+        margin-top: 80px;
+        margin-left: 15px;
+        margin-right: 15px;
+      }
+      .quotes_t{
+        display: none;
+      }
+      .quotes_{
+        display: none;
+      }
 
   /* Workshops */
   /* --------------------------------------------------------------------------------------------- */
@@ -1688,6 +1896,113 @@ top: -140px;
 /* ------------------------------------------------------------------------------------------------ */
 /* 480px */
 @media (max-width: 480px){
+/* menu */
+/* menu */
+/* menu */
+/* menu */
+    .header__logo{
+        margin-left: 30px;
+        margin-top: 5px;
+        margin-right: 120px;
+        z-index: 12;
+      }
+      .header_burger {
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 20px;
+        right: 0;
+        z-index: 12;
+      }
+      .header_burger.active span{
+        transform: scale(0);
+        }
+      .header_burger.active::before{
+      transform: rotate(45deg);
+      top: 9px;
+      }
+      .header_burger.active::after{
+        transform: rotate(-45deg);
+        bottom: 9px;
+        }
+      .header_nav-list{
+        display: block;
+        position: fixed;
+        padding-top: 100px;
+        top: -100%;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        z-index: 11;
+      }
+      .header_nav-list.active{
+        top: 0;
+        transition: all 0.3s ease 0s;
+      }
+      .header_nav-item{
+        padding-left: 20px;
+        padding-top: 30px;
+        font-size: 50px;
+      }
+      .header_user-nav{
+        display: none;
+      }
+      /* why_us */
+      /* why_us */
+      /* why_us */
+      /* why_us */
+      .WHY_US{
+        margin-left: 15px;
+        max-width:396px;
+    
+      }
+      .title_why_us{
+        font-size: 80px;
+      }
+      .text_why_us{
+        display: inline-block;
+        font-family: Poppins;
+        font-size: 19px;
+        padding-top: 25px;
+        word-wrap: break-word;
+        margin-bottom: 25px;
+        text-align: justify;
+        line-height: 1.6;
+      }
+      .img_why_us{
+        display: none;
+      }
+      .container_why_us{
+        max-width: 767px;
+        background-image: url("../img/Vector_ba.svg");
+        background-position: right;
+        background-repeat: no-repeat;
+      }
+      .rectangle{
+        display: none;
+      }
+      .information{
+        display: block;
+      }
+        .flex{
+          max-width:396px;
+        }
+      .title2{
+        margin-left: 0;
+        font-size: 80px;
+      }
+      .text2{
+        margin-top: 80px;
+        margin-left: 15px;
+        margin-right: 15px;
+      }
+      .quotes_t{
+        display: none;
+      }
+      .quotes_{
+        display: none;
+      }
   /* Workshops */
   /* --------------------------------------------------------------------------------------------- */
   /* Workshops */
