--- a/css/style.css
+++ b/css/style.css
@@ -889,9 +889,6 @@ ul > li{
 body {
 color: #fff;
 background-color: #000;
-background-image: url("../img/Vector1.svg");
-background-position: right;
-background-repeat: no-repeat;
 }
 
 
@@ -901,9 +898,12 @@ max-width: 1580px;
 padding: 0 15px;
 margin: 0 auto;
 color: white;
+background-image: url("../img/Vector1.svg");
+background-position: right;
+background-repeat: no-repeat;
 }
 
-.title {
+.title_why_us {
 font-family: Ramabhadra;
 padding-top: 185px;
 font-size: 100px;
@@ -913,7 +913,7 @@ color: transparent;
 width: 600px;
 }
 
-.text {
+.text_why_us {
 display: inline-block;
 font-family: Poppins;
 font-size: 19px;
@@ -931,6 +931,7 @@ line-height: 1.6;
 padding-top: 185px;
 display: inline;
 padding-left: 23px;
+max-width: none; 
 }
 
 /* .button {
@@ -961,6 +962,7 @@ display: flex;
 max-width: 1580px;
 padding: 157px 31.83px;
 margin: 0 auto;
+line-height: 1.3;
 }
 
 .rectangle {
@@ -1029,6 +1031,11 @@ line-height: 43.38px;
 position: relative;
 top: -67px;
 Height: 277px;
+}
+.btn-box_why_us{
+  position: relative;
+  top: -55px;
+  left: 149px;
 }
 
 .quotes_t {
